laatste commit voor het kuisen van de code